trunk/Archive2/67/d62b2dad50d5db/output
main.cpp: In function 'int main()':
main.cpp:10:18: error: 'printf' was not declared in this scope
     printf("%d",N);
                  ^
